--- a/pt St. Philips/about.html
+++ b/pt St. Philips/about.html
@@ -62,8 +62,8 @@
 					<li><a style="cursor: pointer;" onclick="services()"><span class="active-service">SERVICES</a></li>
 					<li><a style="cursor: pointer;" onclick="music()">MUSIC</span></a></li>
 					<li><a style="cursor: pointer;" onclick="staff()">STAFF</a></li>
-					<li><a style="cursor: pointer;" onclick="wte()">WHAT TO EXPECT</a></li>
-					<li><a style="cursor: pointer;" onclick="gar()">GARDEN</a></li>
+					<!-- <li><a style="cursor: pointer;" onclick="wte()">WHAT TO EXPECT</a></li>
+					<li><a style="cursor: pointer;" onclick="gar()">GARDEN</a></li> -->
 				</ul>
 			</section>
 		</div>
@@ -72,7 +72,7 @@
 <div class="container" style="margin-bottom: 2%;">
 	<section id="mission">
 		<div id="mission-start" class="container">
-			<h2 class="mission-header mission-header-green">Services
+			<h2 class="mission-header mission-header-green">Worship
 			</h2>
 				<article class="mission-top-sub">
 					<p>9:00 a.m. Morning Prayer
@@ -85,12 +85,14 @@
 					</p>
 				</article>
 
-			<h2 class="mission-header mission-header-green">Worship
-			</h2>
 				<article class="mission-top-sub">
 					<p>Sunday School - classes for ages 3 through their high school years meet at 10:00 a.m. in the first floor classroom through June 24, 2018.
 					<br>
 					<br>
+					</p>
+					<h3 class="mission-sub-border">A Liturgical Church</h3>
+					<p>
+					St. Philip’s is a liturgical church, which means we follow fixed orders of service, known as liturgies, which are found in the Book of Common Prayer. The Eucharist is the primary focus of our Sunday worship. The Revised Common Lectionary provides the schedule of Bible Lessons and Psalms to be read on specified days throughout the Church Year.
 					</p>
 					<h3 class="mission-sub-border">What to Expect on Sunday</h3>
 					<br>
@@ -105,18 +107,9 @@
 					<br>
 					We know it can seem daunting to visit a church for the first time, not unlike visiting a foreign country where you are uncertain about the customs and traditions. We hope this brief introduction will make your first visit at St. Philip’s more comfortable.
 					</p>
-					<h3 class="mission-sub-border">Two Sunday Morning Services 
-						<br>and Christian Education</h3>
-					<br>
-					<p>Our 9 a.m. service is the smaller of our two Sunday services, and it is done without music. The 11:00 a.m. service, our main service, is a Choral Eucharist with the St. Philip’s Choir (during the academic year), or with music by small ensembles (during the summer months). The congregation joins in the hymns and canticles at the 11:00 a.m. liturgy, and you will find us to be good singers!
-					<br>
-					<br>
-					Church School (for children) takes place during the first half of the 11:00 a.m. Eucharist; the children then join their families in church after the sermon to participate in the remainder of the service. Ask an usher to direct you to the Church School classrooms. Parents are also welcome to bring their children to church for the entire service.
-					</p>
-					<h3 class="mission-sub-border">A Liturgical Church</h3>
-					<p>
-					St. Philip’s is a liturgical church, which means we follow fixed orders of service, known as liturgies, which are found in the Book of Common Prayer. The Eucharist is the primary focus of our Sunday worship. The Revised Common Lectionary provides the schedule of Bible Lessons and Psalms to be read on specified days throughout the Church Year.
-					</p>
+					<p>At 9am, We offer a said service of Holy Eucharist; that is, a spoken worship service of Holy Eucharist (Communion) with prayers and a sermon but without hymns or music. This service is often attractive to those who prefer and/or who wish, from time to time, to experience a more contemplative service of prayer and reflection.</p>
+
+					<p>At 11:00am, We offer a choral Holy Eucharist, which features hymns led by one of our choirs, and which periodically includes the use of incense and communal chanting of certain sections of the worship service. Specifically, worship is led by the Chancel Choir on the first, second and fourth Sundays and by the Voices of Praise contemporary choir on the third and fifth Sundays.</p>
 					<h3 class="mission-sub-border">The Service Bulletin, The Book of Common Prayer, The Hymnal 1982 and LEVAS 
 						<br>(Lift Every Voice and Sing)</h3>
 					<p>
@@ -125,6 +118,14 @@
 					<h3 class="mission-sub-border">The Sign of the Cross</h3>
 					<p>
 					Many people at St. Philip’s follow the ancient custom of making the sign of the cross at various points in the service, in remembrance of their Baptism.
+					</p>
+					<h3 class="mission-sub-border">Two Sunday Morning Services</h3> 
+						<br>and Christian Education</h3>
+					<br>
+					<p>Our 9 a.m. service is the smaller of our two Sunday services, and it is done without music. The 11:00 a.m. service, our main service, is a Choral Eucharist with the St. Philip’s Choir (during the academic year), or with music by small ensembles (during the summer months). The congregation joins in the hymns and canticles at the 11:00 a.m. liturgy, and you will find us to be good singers!
+					<br>
+					<br>
+					Church School (for children) takes place during the first half of the 11:00 a.m. Eucharist; the children then join their families in church after the sermon to participate in the remainder of the service. Ask an usher to direct you to the Church School classrooms. Parents are also welcome to bring their children to church for the entire service.
 					</p>
 				</article>
 		</div>
@@ -170,8 +171,8 @@
 					<li><a style="cursor: pointer;" onclick="services()"><span>SERVICES</a></li>
 					<li><a style="cursor: pointer;" onclick="music()" class="active-service">MUSIC</span></a></li>
 					<li><a style="cursor: pointer;" onclick="staff()">STAFF</a></li>
-					<li><a style="cursor: pointer;" onclick="wte()">WHAT TO EXPECT</a></li>
-					<li><a style="cursor: pointer;" onclick="gar()">GARDEN</a></li>
+					<!-- <li><a style="cursor: pointer;" onclick="wte()">WHAT TO EXPECT</a></li>
+					<li><a style="cursor: pointer;" onclick="gar()">GARDEN</a></li> -->
 				</ul>
 			</section>
 		</div>
@@ -182,16 +183,116 @@
 <div class="container">
 	<section id="mission">
 		<div id="mission-start" class="container">
-			<h2 class="mission-header mission-header-green">Music 
+			<h2 class="mission-header mission-header-green">Music
 			</h2>
 				<article class="mission-top-sub">
-					<p>To be a welcoming and vibrant intergenerational community
-						of faith, focused on sharing the Gospel of Jesus Christ
-						through joyful worship and love, commitment to spiritual growth,
-						and active service in the community.
+					<p>“Music at its best ushers us
+						<br>
+						into the holy, deepens our prayers, heightens our praise, provides an
+						<br>
+						aura of beauty that reflects the nature of God, lifts us into God’s
+						<br>
+						presence, and strengthens our bonds with all creation.”
+						<br>
+						~ Dr. William Bradley Roberts, Virginia Theological Seminary
+						<hr>
+					<p>
+						From centuries’ old traditional Christian hymnody to Anglican chant to Negro
+						Spirituals or to more contemporary Gospel hymns, the music at St. Philip’s
+						strives to be “music at its best”. Currently, our music program consists of the
+						Chancel Choir, the Voices of Praise Contemporary Choir, and the Handbell
+						Choir.
 					</p>
 				</article>
+				<hr>
+			<h2 class="mission-header mission-header-green">Church Choirs
+			</h2>
+			
+				<article class="mission-top-sub">
+					
+					<h3 class="mission-sub-border">Chancel Choir</h3>
+					<br>
+					<p>The Chancel choir of St. Philip’s sings on the first, second and third Sundays of
+					every month, from September – June. It is a group of faithful volunteers who lead
+					the worship service singing traditional hymns, anthems and choral mass settings.
+					At present, the Chancel choir rehearses on Thursday evenings from 6:00 –
+					7:30pm, in addition to a morning rehearsal preceding the 11:15am Eucharist. If
+					you wish to join the Chancel choir, you may contact Erik Carlson at 212-862-
+					4940.
+					</p>
+					<img src="pics/choir2.jpg" style="width:50vw; height: 40vh;">
+					<hr>
 
+					<h3 class="mission-sub-border">Voices of Praise Contemporary Choir</h3>
+					<br>
+					<p>The Voices of Praise Contemporary Choir leads the congregation in singing on
+					the third and fifth Sundays of each month. As their name suggests, this choir
+					performs a varied musical selection of both traditional gospel as well as
+					contemporary gospel and Christian songs.</p>
+					<hr>
+					<p>The Voices of Praise Choir rehearses on Friday evenings at 6:00pm. If you are
+					interested in singing with the V.O.P. choir, please contact Mr. Charles Lovell at
+					the church office, 212-862-4940.
+					</p>
+					
+					<hr>
+
+					<h3 class="mission-sub-border">The Handbell Choir</h3>
+					<p>
+					The handbell choir is comprised of an enthusiastic, intergenerational group of
+					children, teenagers and adults that serve as bell ringers for our three octave set
+					of Malmark handbells. The unique sound of handbells provides a beautiful
+					accompaniment to the liturgy. The Handbell choir performs at festival services,
+					such as the annual service of Advent Lessons and Carols, the Easter service and
+					on other special occasions.
+					</p>
+
+					<img src="pics/bells.png" style="width:50vw; height: 40vh;">
+					<hr>
+
+					<h3 class="mission-sub-border">The Organ of St. Philip’s</h3>
+					<p>
+					The historic Aeolian-Skinner organ, designed by the legendary G. Donald
+					Harrison and installed in 1952, is the foundation for the music ministry of this
+					church. It was considered by organists and organ-builders alike to be quite a
+					unique and fine instrument upon its installation, and many noted performers have
+					been featured in recital at St. Philip’s. Its classic tonal design provided for a fine
+					ensemble of voices which today remain perfect in this great space, designed for
+					fine music.
+					</p>
+					<br>
+					<p>
+					The placement of the 39 ranks and four divisions of the organ (Great, Swell,
+					Choir and Pedal) in two acoustic chambers to the right and left above the
+					Chancel strongly supports congregational singing. In addition, the sounds of the
+					instrument so perfectly fill the church that if one is in the Choir Room, below the
+					main church and quite far from the organ, the delicate, bright sounds of just the 8′
+					and 4′ flutes in the Choir Division can be clearly heard-almost as if they are in the
+					room!
+					</p>
+					<br>
+					<p>As well, a Trompette-en-Chamade speaks dramatically from the rear of the nave.
+					This elegant stop is considered by many to be the first set of such pipes installed
+					by Mr. Harrison in this country.
+					</p>
+					<hr>
+					<p>
+					This wonderful instrument has faithfully served St. Philip’s Church for over 50
+					years but is now in great need of repair and restoration. YOU can help! In order
+
+					to help restore this great organ and continue a tradition of great music at St.
+					Philip’s Church, please consider making a donation. Please make any checks
+					payable to “St. Philip’s Church” and write “organ restoration” in the memo.
+					</p>
+
+					<hr>
+
+					<h3 class="mission-sub-border">Music Events</h3>
+					<p>
+					Beyond the music that is sung and performed as part of our worship, St. Philip’s
+					also offers special concerts and musical events,
+					</p>
+				</article>
 		</div>
 	</section>
 </div>
@@ -242,8 +343,8 @@
 					<li><a style="cursor: pointer;" onclick="services()"><span>SERVICES</a></li>
 					<li><a style="cursor: pointer;" onclick="music()">MUSIC</span></a></li>
 					<li><a style="cursor: pointer;" onclick="staff()" class="active-service">STAFF</a></li>
-					<li><a style="cursor: pointer;" onclick="wte()">WHAT TO EXPECT</a></li>
-					<li><a style="cursor: pointer;" onclick="gar()">GARDEN</a></li>
+					<!-- <li><a style="cursor: pointer;" onclick="wte()">WHAT TO EXPECT</a></li>
+					<li><a style="cursor: pointer;" onclick="gar()">GARDEN</a></li> -->
 				</ul>
 			</section>
 		</div>
@@ -369,8 +470,18 @@
 			<h2 class="vestry-sub">Charles E. Williams, III</h2>
 		</div>
 
+		<br>
+
 		<div>
-			<h1>Vestry of St. Philips</h1>
+			<h2 class="vestry-name fit">Vestry of St. Philips</h2>
+			<p>Wardens: Lisa Forte-Mason, and Beverly Brown <br>
+			Vestry Members: Class of 2018: Felix Okolo, Renee Parris-Scott and Ted Roulette <br>
+			Class of 2019: Neal Baker, Geneva Chase and Eric Hall <br>
+			Class of 2020: Erdene Kims, Rita Livingston and Jasmine Vaughan <br></p>
+			<h2 class="vestry-name fit">Vestry Standing Committees</h2>
+			<p>Buildings & Grounds: Garl Robinson & Randolph V. Jacobs, Jr., Member <br>
+			Stewardship: Rita Livingston</p>
+
 		</div>
 		
 		<!-- <div class="vestry-role-top">
@@ -425,9 +536,9 @@
 					<li><a style="cursor: pointer;" onclick="services()">SERVICES</a></li>
 					<li><a style="cursor: pointer;" onclick="music()">MUSIC</span></a></li>
 					<li><a style="cursor: pointer;" onclick="staff()">STAFF</a></li>
-					<li><a style="cursor: pointer;" onclick="wte()" class="active-service">
+					<!-- <li><a style="cursor: pointer;" onclick="wte()" class="active-service">
 					WHAT TO EXPECT</a></li>
-					<li><a style="cursor: pointer;" onclick="gar()">GARDEN</a></li>
+					<li><a style="cursor: pointer;" onclick="gar()">GARDEN</a></li> -->
 				</ul>
 			</section>
 		</div>
@@ -465,8 +576,8 @@
 					<li><a style="cursor: pointer;" onclick="services()">SERVICES</a></li>
 					<li><a style="cursor: pointer;" onclick="music()">MUSIC</span></a></li>
 					<li><a style="cursor: pointer;" onclick="staff()">STAFF</a></li>
-					<li><a style="cursor: pointer;" onclick="wte()">WHAT TO EXPECT</a></li>
-					<li><a style="cursor: pointer;" onclick="gar()" class="active-service">GARDEN</a></li>
+					<!-- <li><a style="cursor: pointer;" onclick="wte()">WHAT TO EXPECT</a></li>
+					<li><a style="cursor: pointer;" onclick="gar()" class="active-service">GARDEN</a></li> -->
 				</ul>
 			</section>
 		</div>
