--- a/pt St. Philips/celebration.html
+++ b/pt St. Philips/celebration.html
@@ -69,7 +69,15 @@
 				“Holy Baptism is the sacrament by which God adopts us as his children and makes us members of Christ’s Body, the Church, and inheritors of the kingdom of God.” The sacraments of the Episcopal Church baptizes...</p>
 					<button onclick="seemore()" id="myBtn" style="margin: 0;">see more</button>
 
-					<div id="myModal" class="modal">
+					
+			</article>
+
+			<div id="actual-b-button">
+				<button id="volunteerism-button" type="button" class="btn btn-primary btn-lg volunteerism-button">CONTACT</button>
+			</div>
+	</div>
+</section>
+<div id="myModal" class="modal">
 					  <!-- Modal content -->
 					  <div class="modal-content">
 					    <span onclick="close1()" class="close">&times;</span>
@@ -84,13 +92,6 @@
 						If you are interested in this sacrament, please e-mail us at stphilipschurch.org or 212-862-4940.</p>
 					  </div>
 					</div>
-			</article>
-
-			<div id="actual-b-button">
-				<button id="volunteerism-button" type="button" class="btn btn-primary btn-lg volunteerism-button">APPLY</button>
-			</div>
-	</div>
-</section>
 
 <section id="confirmation">
 	<div class="container">
@@ -100,8 +101,14 @@
 					Confirmation and reaffirmation are rites that area meant to help one renew commitments made during baptisms or made on their behalf by parents or others at baptism in the Baptismal Covenant. Confirmation is a declaration of faith and commitment to the Christian life made by someone who has already been baptized but who has now taken the decision ... </p>
 
 					<button id="myBtn-1" onclick="seemore2()">see more</button>
+			</article>
 
-					<div id="myModal-1" class="modal-1">
+			<div id="actual-c-button">
+				<button id="confirmation-button" type="button" class="btn btn-primary btn-lg confirmation-button">CONTACT</button>
+			</div>
+	</div>
+</section>
+<div id="myModal-1" class="modal-1">
 					  <div class="modal-content-1">
 					    <span onclick="close2()" class="close">&times;</span>
 					    <p> for her or himself to follow the way of Jesus and will take the vows of the Baptismal Covenant her or himself. Reaffirmation is for those who have been baptized and confirmed but who, for any number of reasons, want to intentionally renew their commitment to living a Christian life through study and renewal of the Baptismal Covenant vows once again. Both confirmation and reaffirmation involve strengthening by the Holy Spirit through prayer and the laying on of hands by a Bishop.
@@ -110,14 +117,6 @@
 					    Reception is for those from other denominations who want to formally be received as members into the Episcopal Church. Anyone from another Christian church, if they have been baptized with water and in the name of the Trinity, may become a baptized member of the Episcopal Church by having their baptism duly recorded in this church. Moreover, persons baptized in other traditions may also be received by laying on of hands by a bishop, if such persons have also already made an adult affirmation of faith in their baptized traditions. If they have not, then those persons may be confirmed in this church.</p>
 					  </div>
 					</div>
-			</article>
-
-			<div id="actual-c-button">
-				<button id="confirmation-button" type="button" class="btn btn-primary btn-lg confirmation-button">APPLY</button>
-			</div>
-
-	</div>
-</section>
 
 <section id="birthday">
 	<div class="container">
@@ -133,7 +132,7 @@
 			</article>
 
 			<div id="actual-b-button">
-				<button id="volunteerism-button" type="button" class="btn btn-primary btn-lg volunteerism-button">APPLY</button>
+				<button id="volunteerism-button" type="button" class="btn btn-primary btn-lg volunteerism-button">CONTACT</button>
 			</div>
 	</div>
 </section>
@@ -152,7 +151,7 @@
 			</article>
 
 			<div id="actual-c-button">
-				<button id="anniversary-button" type="button" class="btn btn-primary btn-lg anniversary-button">APPLY</button>
+				<button id="anniversary-button" type="button" class="btn btn-primary btn-lg anniversary-button">CONTACT</button>
 			</div>
 
 	</div>
