--- a/pt St. Philips/events.html
+++ b/pt St. Philips/events.html
@@ -77,36 +77,19 @@
 				</div>
 	
 				<div class="box">
-					<h2>Marcus Garvey</h2>
-					<a href="events-list-garvey.html"><img src="./pics/ecclesia.jpeg"></a>
-					<p><i><span>E</span>cclesia Ministry @ Marcus Garvey Park:  - Madison Avenue @ E 120 Street to 124 Street.  
+					<h2>Dance of the Village Elders</h2>
+					<a href="events-list-garvey.html"><img "></a>
+					<p><i><span>N</span>inety minute free fitness classes for seniors on Thursdays @2 p.m.</i> 
 					<br>
 					<br>
 					Dates for St. Philips are every third Sunday of the month.  
 					<br>
 					<br>
-					Prior to the day, parishioners are asked to contribute lunch items - cold cuts/bread/individual packaged drinks/condiments.
+					Prior to the day, parishioners are asked to contribute lunch items - cold cuts/bread/individual packaged drinks/condiments.</p>
 					</i>
-					</p>
 				</div>
 			</div>
 </section>
-
-<section id="boxes" style="padding-bottom: 5%;">
-			<div class="container">
-				<div class="box">
-					<h2>Dance of the Village Elders</h2>
-					<p><i><span>N</span>inety minute free fitness classes for seniors on Thursdays @2 p.m. 
-					<br>
-					<br>Class is designed to address the physical concerns of seniors.  
-					<br>
-					<br>Fof more information contact the parish office at 212-862-4940.
-					</i>
-					</p>
-				</div>
-			</div>
-</section>
-
 
 
 <!-- Content End -->
