--- a/pt St. Philips/rentals.html
+++ b/pt St. Philips/rentals.html
@@ -81,6 +81,10 @@
 		during and after Sunday worship services. You can schedule a special program
 		or event in the garden by contacting theParish Administrator.
 		</p>
+		<div style="text-align: center;">
+		    <a href="agreement/Space License.pdf" download><button id="rentals-button" type="button" class="btn btn-primary btn-lg actual-button-large" style="margin-right: 4%;">Space License</button></a>
+		    <a href="agreement/Space License.pdf" download><button id="rentals-button" type="button" class="btn btn-primary btn-lg actual-button-large">Member License</button></a>
+  		</div>
 	</div>
 </section>
 </div>
@@ -144,6 +148,10 @@
 		during and after Sunday worship services. You can schedule a special program
 		or event in the garden by contacting theParish Administrator.
 		</p>
+		<div style="text-align: center;">
+		    <a href="agreement/Space License.pdf" download><button id="rentals-button" type="button" class="btn btn-primary btn-lg actual-button-large" style="margin-right: 4%;">Space License</button></a>
+		    <a href="agreement/Space License.pdf" download><button id="rentals-button" type="button" class="btn btn-primary btn-lg actual-button-large">Member License</button></a>
+  		</div>
 	</div>
 </section>
 </div>
@@ -213,6 +221,10 @@
 		during and after Sunday worship services. You can schedule a special program
 		or event in the garden by contacting theParish Administrator.
 		</p>
+		<div style="text-align: center;">
+		    <a href="agreement/Space License.pdf" download><button id="rentals-button" type="button" class="btn btn-primary btn-lg actual-button-large" style="margin-right: 4%;">Space License</button></a>
+		    <a href="agreement/Space License.pdf" download><button id="rentals-button" type="button" class="btn btn-primary btn-lg actual-button-large">Member License</button></a>
+  		</div>
 	</div>
 </section>
 </div>
@@ -288,6 +300,10 @@
 		during and after Sunday worship services. You can schedule a special program
 		or event in the garden by contacting theParish Administrator.
 		</p>
+		<div style="text-align: center;">
+		    <a href="agreement/Space License.pdf" download><button id="rentals-button" type="button" class="btn btn-primary btn-lg actual-button-large" style="margin-right: 4%;">Space License</button></a>
+		    <a href="agreement/Space License.pdf" download><button id="rentals-button" type="button" class="btn btn-primary btn-lg actual-button-large">Member License</button></a>
+  		</div>
 	</div>
 </section>
 </div>
@@ -331,6 +347,10 @@
 		during and after Sunday worship services. You can schedule a special program
 		or event in the garden by contacting theParish Administrator.
 		</p>
+		<div style="text-align: center;">
+		    <a href="agreement/Space License.pdf" download><button id="rentals-button" type="button" class="btn btn-primary btn-lg actual-button-large" style="margin-right: 4%;">Space License</button></a>
+		    <a href="agreement/Space License.pdf" download><button id="rentals-button" type="button" class="btn btn-primary btn-lg actual-button-large">Member License</button></a>
+  		</div>
 	</div>
 </section>
 </div>
