--- a/pt St. Philips/giving.html
+++ b/pt St. Philips/giving.html
@@ -201,7 +201,7 @@
 
 <section id="stewardship">
 			<div class="container">
-				<h1>“On This Rock I Will Build My Church...” Matthew 16:18</h1>
+				<h1 style="margin-top: 2%; margin-bottom: 2%;">“On This Rock I Will Build My Church...” Matthew 16:18</h1>
 				
 			</div>
 		
