--- a/pt St. Philips/ministries.html
+++ b/pt St. Philips/ministries.html
@@ -54,7 +54,7 @@
 <div id="ministries-background">
 <div class="jumbotron-fluid giving">
   <div class="container">
-    <h1 id="ministries-header" class="display-4">LOOKING FOR A CHURCH?</h1>
+    <h1 id="ministries-header" class="display-4">St. Philip's Ministries</h1>
   </div>
 </div>
 </div>
@@ -72,7 +72,7 @@
 
 		<aside id="ministries-img-sec">
 			<div id="container">
-			<img src="./pics/warriors.jpg" class="min-pic">
+			<img src="./pics/warriors.jpg" class="min-pic-warr">
 			</div>
 		</aside>
 
@@ -86,14 +86,20 @@
 	<div class="container">
 		<h2 class="ministries-header">Ecclesia Ministry</h2>
 			<article class="ministries-content">
-				<p>A coalition of churches, of which St. Philip's is one, conducts amonthly outdoor worship service in Marcus Garvey Park located on Madison between  E 120  and 124 Streets.  The host church makes and serves lunch for distribution after service in the park.<br>
+				<p>A coalition of churches, of which St. Philip's is one, conducts amonthly outdoor worship service in Marcus Garvey Park located on Madison between  E 120  and 124 Streets.  The host church makes and serves lunch for distribution after service in the park.</p><br>
+				<p>Outreach</p>
+				<p>Ecclesia Ministry @ Marcus Garvey Park: - Madison Avenue @ E 120 Street to 124 Street. 
+
+				Dates for St. Philips are every third Sunday of the month. 
+
+				Prior to the day, parishioners are asked to contribute lunch items - cold cuts/bread/individual packaged drinks/condiments.</p>
 			</article>
 	</div>
 </section>
 
 		<aside id="ministries-img-sec">
 			<div id="container">
-			<img src="placeholder">
+			<img src="./pics/ecclesia.jpeg" class="min-pic-ecc">
 			</div>
 		</aside>
 
@@ -377,6 +383,48 @@
 		</aside>
 
 <header></header>
+
+<!--  -->
+
+<section id="volunteerism">
+	<div class="container">
+		<h2 class="ministries-header">Sunday School:</h2>
+			<article class="ministries-content">
+				<p>Children five to eighteen years old are taught Christian theology based on <span>The Book of Common Prayer</span> and <span>The Bible.</span><br>
+			</article>
+	</div>
+</section>
+
+
+		<aside id="ministries-img-sec">
+			<div id="container">
+			<img src="placeholder">
+			</div>
+		</aside>
+
+<header></header>
+
+<!--  -->
+
+<section id="volunteerism">
+	<div class="container">
+		<h2 class="ministries-header">Women's Ministry</h2>
+			<article class="ministries-content">
+				<p>Fosters togetherness through worship, hospitality and fundraising for the betterment of the church and the community-at-large..<br>
+			</article>
+	</div>
+</section>
+
+
+		<aside id="ministries-img-sec">
+			<div id="container">
+			<img src="placeholder">
+			</div>
+		</aside>
+
+<header></header>
+
+<!--  -->
 <!-- Time End -->
 
 
