--- a/pt St. Philips/celebration.html
+++ b/pt St. Philips/celebration.html
@@ -65,8 +65,7 @@
 		<h2 class="baptisim-header">BAPTISM</h2>
 			<article class="baptisim-content">
 				<p>Have a baptism coming up? <br> <br>
-					Baptism is the sacrament by which a person is joined to Christ and becomes a member of the Church. The Catechism of the Episcopal Book of Common Prayer elaborates that,
-				“Holy Baptism is the sacrament by which God adopts us as his children and makes us members of Christ’s Body, the Church, and inheritors of the kingdom of God.” The sacraments of the Episcopal Church baptizes...</p>
+				Baptism is the sacrament by which a person is joined to Christ and becomes a member of the Church. The Catechism of the Episcopal Book of Common Prayer elaborates that, “Holy Baptism is the sacrament by which God adopts us as his children and makes us members of Christ’s Body, the Church, and inheritors of the kingdom of God.”</p>
 					<button onclick="seemore()" id="myBtn" style="margin: 0;">see more</button>
 
 					
@@ -81,14 +80,9 @@
 					  <!-- Modal content -->
 					  <div class="modal-content">
 					    <span onclick="close1()" class="close">&times;</span>
-					    <p>We
-
-
-					    	The sacraments of the Episcopal Church baptizes both adults who have grown in their faith in Christ and
-						children whose guardians present them for this celebration. Through the rite of Baptism, there begins
-						an eternal bond between the person and God. Thus, once Baptized within any denomination, the
-						Episcopalian Church does not require a person to be re-baptized. And, we welcome exploring with any
-						baptized person membership in the Episcopal Church.
+					    <p>We baptize both adults who have come to have faith in Christ and children whose guardians present them for the sacrament. We believe, that Baptism creates an eternal bond between the person and God. We do not, therefore, re-baptize those who were previously baptized, whether in the Episcopal Church or in another context. We would be delighted to explore with any baptized persons membership in the Episcopal Church.
+					    <br>
+					    <br>
 						If you are interested in this sacrament, please e-mail us at stphilipschurch.org or 212-862-4940.</p>
 					  </div>
 					</div>
@@ -100,7 +94,7 @@
 				<p>Have a confirmation coming up? <br> <br>
 					Confirmation and reaffirmation are rites that area meant to help one renew commitments made during baptisms or made on their behalf by parents or others at baptism in the Baptismal Covenant. Confirmation is a declaration of faith and commitment to the Christian life made by someone who has already been baptized but who has now taken the decision ... </p>
 
-					<button id="myBtn-1" onclick="seemore2()">see more</button>
+					<button id="myBtn-2" onclick="seemore2()">see more</button>
 			</article>
 
 			<div id="actual-c-button">
@@ -108,8 +102,8 @@
 			</div>
 	</div>
 </section>
-<div id="myModal-1" class="modal-1">
-					  <div class="modal-content-1">
+<div id="myModal-2" class="modal-2">
+					  <div class="modal-content-2">
 					    <span onclick="close2()" class="close">&times;</span>
 					    <p> for her or himself to follow the way of Jesus and will take the vows of the Baptismal Covenant her or himself. Reaffirmation is for those who have been baptized and confirmed but who, for any number of reasons, want to intentionally renew their commitment to living a Christian life through study and renewal of the Baptismal Covenant vows once again. Both confirmation and reaffirmation involve strengthening by the Holy Spirit through prayer and the laying on of hands by a Bishop.
 					    <br>
@@ -125,10 +119,10 @@
 				<p>Have a birthday or anniversary coming up? <br> <br>
 					St. Philip’s hosts services for parishioners as well as anyone who finds our church a place of spiritual and
 					religious significance. Based on the requested services, the rites from our Book of Common Prayer is
-					used.
-					If St. Philip’s can be of assistance to you for these events in your life, please contact the Pastor to review
-					our policies and procedures.
+					used. If St. Philip’s can be of assistance to you for these events in your life please contact the Pastor to review our policies and procedures...
 				</p>
+
+					<button id="myBtn-3" onclick="seemore3()">see more</button>
 			</article>
 
 			<div id="actual-b-button">
@@ -137,17 +131,23 @@
 	</div>
 </section>
 
+<div id="myModal-3" class="modal-3">
+					  <div class="modal-content-3">
+					    <span onclick="close3()" class="close">&times;</span>
+					    <p>
+					    St. Philip's stands ready to accompany people as they lose loved ones to death. Our priests can provide pastoral care to those who mourn and arrange for a funeral or memorial service. Various ministers on the St. Philip's staff, including our organists and other musicians, will work to provide a dignified and appropriate service. St. Philip's clergy must preside at all funerals held here.</p>
+					  </div>
+					</div>
+
 <section id="anniversary">
 	<div class="container">
 		<h2 class="anniversary-header">WEDDINGS</h2>
 			<article class="anniversary-content">
 				<p>Have a wedding coming up? <br> <br>
-					St. Philip’s hosts services for parishioners as well as anyone who finds our church a place of spiritual and
-					religious significance. Based on the requested services, the rites from our Book of Common Prayer is
-					used.
-					If St. Philip’s can be of assistance to you for these events in your life, please contact the Pastor to review
-					our policies and procedures.
+					The Episcopal Church recognizes Holy Matrimony as a sacramental rite in which two people enter a lifelong union. They speak their vows before God and in the presence of the Church, receiving grace from God to help them fulfill the promises they have made. At its General Convention in 2015, the Church made the rites of Holy Matrimony accessible to same-sex as well as...
 				</p>
+
+					<button id="myBtn-4" onclick="seemore4()">see more</button>
 			</article>
 
 			<div id="actual-c-button">
@@ -157,16 +157,35 @@
 	</div>
 </section>
 
+<div id="myModal-4" class="modal-4">
+					  <div class="modal-content-4">
+					    <span onclick="close4()" class="close">&times;</span>
+					    <p>  
+					    At its General Convention in 2015, the Church made the rites of Holy Matrimony accessible to same-sex as well as different-sex couples, and the Cathedral upholds that decision.
+					    <br>
+					   	<br>
+					    Couples who have a relationship with St. Philip's Church are encouraged to celebrate their marriage here. We welcome others to meet with the Rector to explore whether Saint John the Divine is the right place for your wedding.
+					    <br>
+					    <br>
+						For the details on having a wedding at St. Philip's please contact our Church Administrator...</p>
+					  </div>
+					</div>
+
 <!-- Footer -->
-		<section style="margin-top: 0;" id="newsletter">
+		<section id="newsletter">
+				<section id="map">
+					<iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d12078.409997143459!2d-73.944882!3d40.814728!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xd80e863dda97e1!2sSt+Philip&#39;s+Church!5e0!3m2!1sen!2sus!4v1527041300640" width="200" height="200" frameborder="0" allowfullscreen></iframe>
+				</section>
+			
 			<div class="container">
 				<ul id="social">
 					<li><a href="#"><img src="insta.svg"></a></li>
 					<li><a href="#"><img src="facebook.svg"></a></li>
 				</ul>
 				<h1 id="footer-head"><i>JOIN US THIS LITURGICAL YEAR</i><br> 
-					<span id="footer-sub">WE WILL SEND YOU UPCOMING EVENTS THROUGH EMAIL</span>
+					<span id="footer-sub">KEEP IN TOUCH WITH ST. PHILIP'S</span>
 				</h1>
+
 				<form action="process.php">
 					<input type="email" placeholder="Enter email" name="">
 					<button type="submit" class="button_1">Subscribe</button>
@@ -184,16 +203,20 @@
 <script type="text/javascript">
 var modal = document.getElementById('myModal');
 // Get the button that opens the modal
-var btn = document.getElementById("myBtn");
-// Get the <span> element that closes the modal
 
+// When the user clicks on the button, open the modal 
+var modal2 = document.getElementById('myModal-2');
+// Get the button that opens the modal
 
 
 // When the user clicks on the button, open the modal 
-var modal2 = document.getElementById('myModal-1');
+var modal3 = document.getElementById('myModal-3');
 // Get the button that opens the modal
-var btn2 = document.getElementById("myBtn-1");
-// Get the <span> element that closes the modal
+
+
+// When the user clicks on the button, open the modal 
+var modal4 = document.getElementById('myModal-4');
+// Get the button that opens the modal
 
 
 
@@ -216,6 +239,14 @@ function seemore2() {
 	modal2.style.display = "block";
 }
 
+function seemore3() {
+	modal3.style.display = "block";
+}
+
+function seemore4() {
+	modal4.style.display = "block";
+}
+
 
 
 // When the user clicks on <span> (x), close the modal
@@ -227,6 +258,14 @@ function close2() {
         modal2.style.display = "none";
     }
 
+function close3() {
+        modal3.style.display = "none";
+    }
+
+function close4() {
+        modal4.style.display = "none";
+    }
+
 // When the user clicks anywhere outside of the modal, close it
 window.onclick = function(event) {
     if (event.target == modal) {
@@ -234,6 +273,12 @@ window.onclick = function(event) {
     }
     if (event.target == modal2) {
         modal2.style.display = "none";
+    }
+    if (event.target == modal3) {
+        modal3.style.display = "none";
+    }
+    if (event.target == modal4) {
+        modal4.style.display = "none";
     }
 }
 
