--- a/pt St. Philips/giving.html
+++ b/pt St. Philips/giving.html
@@ -67,6 +67,8 @@
     <a href="#time-header"><button id="actual-button" type="button" class="btn btn-primary btn-lg actual-button">Time</button></a>
 
     <a href="#talent-header"><button id="actual-button" type="button" class="btn btn-primary btn-lg actual-button" style="margin-left: 2%;">Talent</button></a>
+
+    <a href="#steward-header"><button id="actual-button" type="button" class="btn btn-primary btn-lg actual-button" style="margin-left: 2%;">Stewardship</button></a>
   </div>
 
 </div>
