--- a/pt St. Philips/events-list-1.html
+++ b/pt St. Philips/events-list-1.html
@@ -94,15 +94,20 @@
 <!-- Content End -->
 
 <!-- Footer -->
-		<section style="margin-top: 0;" id="newsletter">
+		<section id="newsletter">
+				<section id="map">
+					<iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d12078.409997143459!2d-73.944882!3d40.814728!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xd80e863dda97e1!2sSt+Philip&#39;s+Church!5e0!3m2!1sen!2sus!4v1527041300640" width="200" height="200" frameborder="0" allowfullscreen></iframe>
+				</section>
+			
 			<div class="container">
 				<ul id="social">
 					<li><a href="#"><img src="insta.svg"></a></li>
 					<li><a href="#"><img src="facebook.svg"></a></li>
 				</ul>
 				<h1 id="footer-head"><i>JOIN US THIS LITURGICAL YEAR</i><br> 
-					<span id="footer-sub">WE WILL SEND YOU UPCOMING EVENTS THROUGH EMAIL</span>
+					<span id="footer-sub">KEEP IN TOUCH WITH ST. PHILIP'S</span>
 				</h1>
+
 				<form action="process.php">
 					<input type="email" placeholder="Enter email" name="">
 					<button type="submit" class="button_1">Subscribe</button>
