--- a/pt St. Philips/index.html
+++ b/pt St. Philips/index.html
@@ -141,10 +141,11 @@
 
 
 <!-- Footer -->
-		<section id="newsletter" style="margin-top: 0;">
-				<section id="map" style="width: 10 vw; height: 20vh; background-color: yellow; float: right; overflow: hidden; position: absolute; right: 5vw; display: inline-block;">
-					<iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d12078.409997143459!2d-73.944882!3d40.814728!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xd80e863dda97e1!2sSt+Philip&#39;s+Church!5e0!3m2!1sen!2sus!4v1527041300640" width="200" height="200" frameborder="0" style="border:0" allowfullscreen></iframe>
+		<section id="newsletter">
+				<section id="map">
+					<iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d12078.409997143459!2d-73.944882!3d40.814728!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xd80e863dda97e1!2sSt+Philip&#39;s+Church!5e0!3m2!1sen!2sus!4v1527041300640" width="200" height="200" frameborder="0" allowfullscreen></iframe>
 				</section>
+			
 			<div class="container">
 				<ul id="social">
 					<li><a href="#"><img src="insta.svg"></a></li>
@@ -158,9 +159,7 @@
 					<input type="email" placeholder="Enter email" name="">
 					<button type="submit" class="button_1">Subscribe</button>
 				</form>
-
 			</div>
-			
 		</section>
 
 
