--- a/pt St. Philips/rentals.html
+++ b/pt St. Philips/rentals.html
@@ -55,7 +55,7 @@
 
 <!-- About Start -->
 <div id="services-1">
-	<div id="services-img">
+	<div id="garden-img">
 		<div class="container">
 			<section id="services">
 				<ul>
@@ -79,7 +79,7 @@
 		presence in the quiet stillness. The garden is a resource for all the community
 		and access is granted weekdays during parish office hours as well as before,
 		during and after Sunday worship services. You can schedule a special program
-		or event in the garden by contacting theParish Administrator.
+		or event in the garden by contacting the Parish Administrator.
 		</p>
 		<div style="text-align: center;">
 		    <a href="agreement/Space License.pdf" download><button id="rentals-button" type="button" class="btn btn-primary btn-lg actual-button-large" style="margin-right: 4%;">Space License</button></a>
@@ -122,7 +122,7 @@
 
 <!-- About Start -->
 <div id="music-1" style="display: none;">
-	<div id="services-img">
+	<div id="undercroft-img">
 		<div class="container">
 			<section id="services">
 				<ul>
@@ -195,7 +195,7 @@
 
 
 <div id="staff-1" style="display: none;">
-	<div id="services-img">
+	<div id="nave-img">
 		<div class="container">
 			<section id="services">
 				<ul>
@@ -274,7 +274,7 @@
 
 <!-- About Start -->
 <div id="wte-1" style="display: none;">
-	<div id="services-img">
+	<div id="sanctuary-img">
 		<div class="container">
 			<section id="services">
 				<ul>
@@ -367,15 +367,20 @@
 
 
 <!-- Footer -->
-		<section style="margin-top: 0;" id="newsletter">
+<section id="newsletter">
+				<section id="map">
+					<iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d12078.409997143459!2d-73.944882!3d40.814728!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xd80e863dda97e1!2sSt+Philip&#39;s+Church!5e0!3m2!1sen!2sus!4v1527041300640" width="200" height="200" frameborder="0" allowfullscreen></iframe>
+				</section>
+			
 			<div class="container">
 				<ul id="social">
 					<li><a href="#"><img src="insta.svg"></a></li>
 					<li><a href="#"><img src="facebook.svg"></a></li>
 				</ul>
 				<h1 id="footer-head"><i>JOIN US THIS LITURGICAL YEAR</i><br> 
-					<span id="footer-sub">WE WILL SEND YOU UPCOMING EVENTS THROUGH EMAIL</span>
+					<span id="footer-sub">KEEP IN TOUCH WITH ST. PHILIP'S</span>
 				</h1>
+
 				<form action="process.php">
 					<input type="email" placeholder="Enter email" name="">
 					<button type="submit" class="button_1">Subscribe</button>
